Update reason param